- setting per-system kickstart template to "" or "delete" restores inheritance
- if repos in profiles no longer exist, remove noisy warning, move to "check"
- move warning about reposync to check also (check is more useful at runtime now)
- build pxe trees for systems even if interface0 is undefined
- add sync() back into XMLRPC API, missing in 0.9.1

- Fri May 09 2008 - 0.9.1
- patch to allow yumopts to override gpgcheck
- applied patch to send hostname from ISC
- added patch to allow --kopts/--ksmeta items to be cleared with --kopts=delete
- tftpboot location is now inferred from xinetd config (added for F9 compat)
- added authn_ldap and stub for authz_configfile
- authz_configfile allows filtering ldap/other users by config file
- WebUI now has checkbox on distro/profile for deleting child objects
- cli has different semantics between "add" and "edit" now for safety reasons
- cobbler wants to keep IPs/MACs unique now in configuration (can be disabled)
- added --clobber option to allow add to overwrite existing objects (for scripts)
- updated/tested kerberos support for those needing to auth against it 
- update menu.c32 to 3.62 to allow for timeouts during menu (and future submenu)
- update PXE defaults to invoke menu.c32 automatically w/ timeout
- removed dependency on rhpl
- import can now take an --arch (and is recommended usage)
- now possible to override snippets on a profile/system specific basis
- provide a different default sample kickstart for imports of F8 and later
- support for kerberos authentication
- revamped pre/post install triggers system (triggered via cgi from kickstart wget)
- logrotate should not send emails to root when restarting services
- default core (but not repo add) repos to priority 1 (lowest) if using priorities plugin
- change default authentication to deny_all, xmlrpc_rw_enabled now on by default
- additional fix for mod_python select box submissions
- set repo arch if found in the URL and no --arch is specified