@@ -13,6 +13,7 @@ Cobbler CHANGELOG
 - move warning about reposync to check also (check is more useful at runtime now)
 - build pxe trees for systems even if interface0 is undefined
 - add sync() back into XMLRPC API, missing in 0.9.1
+- added 'distro_name', 'profile_name', and 'system_name' to generated template vars
 
 - Fri May 09 2008 - 0.9.1
 - patch to allow yumopts to override gpgcheck
